# erpnextswiss

./: pyproject.toml
erpnextswiss/erpnextswiss/: planzer.py
erpnextswiss/erpnextswiss/zugferd/: test_zugferd.py  zugferd.py
