[project]
name = "erpnextswiss"
authors = [
    { name = "libracore AG", email = "info@libracore.com"}
]
description = "ERPNext extension for Switzerland"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # dependencies
    "frappe>=15.0",
    "bs4",
    "factur-x>=2.3",
    "unidecode",
    "opencv-python",
    "pymupdf",
    "fintech",
    "icalendar",
    "lxml",
    "PyPika @ git+https://github.com/frappe/pypika@2c50e6142b2d61d2d243e466fdd5dc03b3d918f2",
    "gunicorn @ git+https://github.com/frappe/gunicorn@bb554053bb87218120d76ab6676af7015680e8b6"
]

[project.urls]
Homepage = "https://git.libracore.io/libracore/erpnextswiss"
Repository = "https://git.libracore.io/libracore/erpnextswiss.git"
"Bug Reports" = "https://git.libracore.io/libracore/erpnextswiss/issues"

[deploy.dependencies.apt]
packages = [
    "ffmpeg",
    "libsm6",
    "libxext6",
]
